# claude-revolver

./: Cargo.toml  README.md  claude-revolver  claude-revolver-monitor  install.sh  rate-limit-hook.sh
docs/: architecture.md  internals.md
src/: account.rs  cli.rs  config.rs  error.rs  history.rs  main.rs  paths.rs  sessions.rs  strategy.rs  swap.rs  types.rs  usage.rs  util.rs
src/commands/: add.rs  config.rs  history.rs  hook.rs  install.rs  list.rs  mod.rs  monitor.rs  remove.rs  sessions.rs  status.rs  switch.rs  sync.rs  tui.rs  wrap.rs
systemd/: claude-revolver-monitor.service  claude-revolver-monitor.timer
tests/integration/: account_tests.rs  cli_tests.rs  config_tests.rs  helpers.rs  history_tests.rs  hook_rate_limit_tests.rs  hook_session_tests.rs  hook_stop_tests.rs  install_tests.rs  mod.rs  monitor_tests.rs  wrap_tests.rs
