[package]
name = "claude-revolver"
version = "0.1.3"
edition = "2024"
description = "Multi-account OAuth credential manager for Claude Code CLI"
license = "MIT"
repository = "https://github.com/ds1sqe/claude-revolver"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
